--- a/Html/style.css
+++ b/Html/style.css
@@ -1,51 +1,123 @@
+/*element css*/
 *{
-    margin: 0px;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-body{
-    background-color: rgb(29, 29, 29);
-    font: 20px Tahoma, Geneva, Verdana ;
-    margin-left: 100px;
-    margin-right: 100px;
-    
+body {
+    background-color: black ;
 }
-.hastag{
-    color: rgb(255, 200, 0);
-}
+nav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgb(109, 109, 109);
+    border-bottom: 5px solid orange;
+    min-height: 50px;
+}   
 
-h1{
-    font: 700 40px Tahoma, Geneva, Verdana center;
-}
+nav ul{
 
-.texto{
-    color: white;
-    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.linea{
-    border-top: solid white 1px;
-}
-
-td{
-    border: 1px solid white;
-}
-
-img{
-    float: left;
-    margin-right: 5px;
-}
-.im
-
-#article .sobreMi.texto p {
-    text-align: justify;
-}
-#article .sobreMi h1 {
+nav ul li {
+    width: 100px;
+    background-color: orange;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 5px;
     text-align: center;
-    padding-bottom: 5px;
+    float: left;
+    list-style: none;
+    margin-right: 10px;
+    margin-left: 10px;
+ 
+}
+nav ul li:hover{
+    background-color: gray;
 }
 
-#article{
-    border: solid white 2px;
-    overflow: auto;
-    padding-bottom: 5px;
-}
 
+
+/*class and id css*/
+
+#container{
+    position:static;
+    background-color: rgb(62, 62, 62);
+    margin: 75px 100px 0px 100px;
+    color: white;
+    padding: 10px;
+}
+#cat_flex{
+    margin-top: 300px;
+}
+.icon{
+    float: left;
+    font-size: 50px;
+    color: white;
+}
+#menu{
+    padding-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.sobreMi{
+    border-top: 3px solid white;
+    margin-top: 30px;
+    padding-top: 20px;
+}
+.gatoSiames{
+    float: left;
+    width: 300px;
+    margin: 10px;
+}
+#socialmedia{
+    margin-top: 10px;
+    margin-left: 30px;
+    display: flex;
+    list-style: none;
+    font-size: 30px;
+}
+.on:hover{
+    color: rgb(86, 86, 86);
+}
+#socialmedia li{
+    margin-right: 20px;
+}
+#cats{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.raza{
+    width: 300px;
+    height: max-content;
+    background-color: white;
+    text-align: justify;
+    color: rgb(0, 0, 0);
+    margin: 10px;
+    padding: 7px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.raza p{
+    border-top: 3px solid red;
+}
+.raza img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.raza h3{
+    text-align: center;
+}
+#aboutme section p{
+    padding: 10px;
+}
+a:any-link{
+    color: white;
+}
