--- a/Html/style.css
+++ b/Html/style.css
@@ -51,7 +51,8 @@ nav ul li:hover{
     padding: 10px;
 }
 #cat_flex{
-    margin-top: 300px;
+    margin-top: 100px;
+    border-top: 2px solid white;
 }
 .icon{
     float: left;
@@ -91,7 +92,8 @@ nav ul li:hover{
 #cats{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content:center;
+    gap: 20px;
 }
 .raza{
     width: 300px;
@@ -120,4 +122,23 @@ nav ul li:hover{
 }
 a:any-link{
     color: white;
+}
+.elemen_grid{
+    width: 200px;
+    height: 200px;
+}
+.img_box {
+    margin-left: auto;
+    margin-right: auto;
+}
+#grid_cat{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px;
+    gap: 20px;
+    justify-content: center;
+}
+#table{
+    margin-top: 40px;
+    border-top: 2px solid white;
 }
