--- a/Html/style.css
+++ b/Html/style.css
@@ -135,7 +135,7 @@ a:any-link{
     margin-top: 30px;
     display: grid;
     grid-template-columns: 200px 200px 200px 200px;
-    gap: 20px;
+    grid-gap: 20px;
     justify-content: center;
 }
 #table{
