--- a/Html/style.css
+++ b/Html/style.css
@@ -2,7 +2,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 body {
     background-color: black ;
@@ -14,6 +14,7 @@ nav{
     background-color: rgb(109, 109, 109);
     border-bottom: 5px solid orange;
     min-height: 50px;
+    
 }   
 
 nav ul{
@@ -24,6 +25,7 @@ nav ul{
 }
 nav ul li {
     width: 100px;
+    
     background-color: orange;
     font-size: 20px;
     font-weight: 700;
@@ -35,11 +37,18 @@ nav ul li {
     margin-left: 10px;
  
 }
+nav ul li a {
+    text-decoration:  none;
+}
 nav ul li:hover{
     background-color: gray;
 }
 
+iframe {
+    width: 70%;
+    height: 550px
 
+}
 
 /*class and id css*/
 
@@ -75,6 +84,7 @@ nav ul li:hover{
     float: left;
     width: 300px;
     margin: 10px;
+
 }
 #socialmedia{
     margin-top: 10px;
@@ -134,11 +144,55 @@ a:any-link{
 #grid_cat{
     margin-top: 30px;
     display: grid;
-    grid-template-columns: 200px 200px 200px 200px;
     grid-gap: 20px;
     justify-content: center;
+}
+@media(min-width:700px){
+    #grid_cat{grid-template-columns: repeat(2,1fr);}
+}
+@media(min-width:900px){
+    #grid_cat{grid-template-columns: repeat(3,1fr);}
+}
+@media(min-width:1200px){
+    #grid_cat{grid-template-columns: repeat(4,1fr);}
 }
 #table{
     margin-top: 40px;
     border-top: 2px solid white;
+}
+#contact_area{
+    background-color: orange;
+    min-height: 100px;
+    padding: 10px 30% 10px 10%;
+    
+}
+.itemform{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.itemform label{
+    color: black;
+    justify-self:left;
+    font-size: 20px;
+    font-weight: 700;
+}
+.itemform input, .itemform textarea{
+    border-radius: 5px;
+}
+input[type="submit"]{
+    background-color: black;
+    color: white;
+    grid-column: 2/3;
+    justify-self: end ;
+    padding: 10px;
+}
+input[type="submit"]:hover{
+    color: black;
+    background-color: white;
+}
+#video{
+    text-align: center;
+    margin: 10px;
 }
